--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
 @import "styles/input";
 @import "styles/arena";
 @import "styles/podium";
+@import "styles/scoreboard";
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap");
 .App {
   height: 100vh;
